[package]
name = "borg"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
	"clock",
	"std",
] }
dotenv = { version = "0.15" }
env_logger = { version = "0.10" }
log = { version = "0.4" }
